# barbeque

./: .gitignore  CMakeLists.txt  Doxyfile.in  Kconfig  README  bosp.mk  init_env
.cmake/: BuildDoxygenDocumentation.cmake  FindBbqMonitors.cmake  FindBbqRTLib.cmake  FindCGroup.cmake  FindLog4CPP.cmake  FindTiCPP.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
bbque/: CMakeLists.txt  application_manager.cc  application_proxy.cc  barbeque.cc  configuration_manager.cc  console_logger.cc  daemonize.cc  dynamic_library.cc  logger.cc  logger_log4cpp.cc  main.cc  main.cpp  modules_factory.cc  object.cc  platform_proxy.cc  platform_services.cc  plugin_manager.cc  profile_manager.cc  resource_accounter.cc  resource_manager.cc  resource_scheduler.cc  rpc_messages.cc  rpc_proxy.cc  scheduler_manager.cc  signals_manager.cc  synchronization_manager.cc  test_platform_data.cc  version.cc.in
bbque/app/: CMakeLists.txt  application.cc  plugin_data.cc  recipe.cc  working_mode.cc
bbque/cpp11/: CMakeLists.txt  gnu_chrono.cc  gnu_condition_variable.cc  gnu_future.cc  gnu_mutex.cc  gnu_thread.cc
bbque/pp/: linux.cc
bbque/res/: CMakeLists.txt  resource_accounter.cc  resource_tree.cc  resources.cc  usage.cc
bbque/utils/: CMakeLists.txt  attributes_container.cc  deferrable.cc  metrics_collector.cc  perf.cc  timer.cc
config/: bbque.conf  bbque.conf.in  bbque.conf_dbg  bbque.conf_dbg.in  bbque_2parma_demo2.conf.in  bbqued.defaults.in  bbqued.in  bosp_init.env.in
config/pil/: default.bpl  default.cgroup  numasaurus-jr.bpl
demos/: CMakeLists.txt  bbque2PARMADemo2.sh.in  bbque2PARMADemo3.sh.in  bbque2PARMAOCVDemo1.sh.in
doxygen/: bbque_sec00_app.dox  bbque_sec00_build.dox  bbque_sec00_index.dox  bbque_sec00_run.dox  bbque_sec00_sources.dox  bbque_sec01_overview.dox  bbque_sec02_cm.dox  bbque_sec03_am.dox  bbque_sec04_rm.dox  bbque_sec05_sm.dox  bbque_sec06_ym.dox  bbque_sec07_pm.dox  bbque_sec07_ra.dox  bbque_sec10_ap.dox  bbque_sec20_pp.dox  bbque_sec20_pp_linux.dox  main.dox  rtlib_sec01_ow.dox  rtlib_sec01_recipe.dox  rtlib_sec02_aem.dox  rtlib_sec03_plain.dox  rtlib_sec04_mon.dox  rtlib_sec04_mon_generic.dox  rtlib_sec04_mon_memory.dox  rtlib_sec04_mon_thgpt.dox  rtlib_sec04_mon_time.dox  rtlib_sec04_op.dox  rtlib_sec04_rtm.dox
include/bbque/: application_manager.h  application_manager_conf.h  application_manager_status.h  application_proxy.h  barbeque.h  c_modules.h  config.h.in  configuration_manager.h  console_logger.h  dynamic_library.h  exception.h  logger.h  logger_log4cpp.h  modules.h  modules_factory.h  object.h  platform_proxy.h  platform_services.h  plugin_manager.h  profile_manager.h  resource_accounter.h  resource_accounter_conf.h  resource_accounter_status.h  resource_manager.h  resource_scheduler.h  rpc_proxy.h  rtlib.h  scheduler_manager.h  signals_manager.h  synchronization_manager.h  system.h  system_view.h  test_module_adapter.h  test_platform_data.h  version.h
plugins/: CMakeLists.txt
plugins/logger/: CMakeLists.txt  android_logger.cc  android_logger.h  android_plugin.cc  android_plugin.h  log4cpp_logger.cc  log4cpp_logger.h  log4cpp_plugin.cc  log4cpp_plugin.h
plugins/rloader/: CMakeLists.txt  xml_plugin.cc  xml_plugin.h  xml_rloader.cc  xml_rloader.h
plugins/rpc/: CMakeLists.txt  fifo_plugin.cc  fifo_plugin.h  fifo_rpc.cc  fifo_rpc.h
plugins/schedpol/: CMakeLists.txt  random_plugin.cc  random_plugin.h  random_schedpol.cc  random_schedpol.h  yamca_plugin.cc  yamca_plugin.h  yamca_schedpol.cc  yamca_schedpol.h  yams_plugin.cc  yams_plugin.h  yams_schedpol.cc  yams_schedpol.h
plugins/schedpol/contrib/: CMakeLists.txt  mct_congestion.cc  mct_congestion.h  mct_fairness.cc  mct_fairness.h  mct_reconfig.cc  mct_reconfig.h  mct_value.cc  mct_value.h  metrics_contribute.cc  metrics_contribute.h  sc_congestion.cc  sc_congestion.h  sc_fairness.cc  sc_fairness.h  sc_reconfig.cc  sc_reconfig.h  sc_value.cc  sc_value.h  sched_contrib.cc  sched_contrib.h  sched_contrib_manager.cc  sched_contrib_manager.h
plugins/syncpol/: CMakeLists.txt  sasb_plugin.cc  sasb_plugin.h  sasb_syncpol.cc  sasb_syncpol.h
plugins/test/: CMakeLists.txt  aprox_plugin.cc  aprox_plugin.h  aprox_test.cc  aprox_test.h  coreint_plugin.cc  coreint_plugin.h  coreint_test.cc  coreint_test.h  dummy_plugin.cc  dummy_plugin.h  dummy_test.cc  dummy_test.h  static_test_object.cc  static_test_object.h  static_test_plugin.cc  static_test_plugin.h
rtlib/: CMakeLists.txt  bbque_errors.cc  bbque_exc.cc  bbque_rpc.cc  bbque_rtlib.cc  rpc_fifo_client.cc
rtlib/monitors/: CMakeLists.txt  application_rtrm.cc  application_specific_rtm.cc  memory_monitor.cc  op_manager.cc  run_time_manager.cc  throughput_monitor.cc  time_monitor.cc
test/: CMakeLists.txt  RecipeGenerator.sh  test_all.cc  test_constraints.cc  test_test.cc  tests.h
testing/: CMakeLists.txt  bbqProfileGrapher.py  bbqProfiler.sh  dbg_bbque.sh  demo-usecase.sh  multi_app_load.sh  run_bbque.sh  scenario1.sh  scenario2.sh  scenario3.sh  spawn_apps.sh  test_migrec.sh  trace_bbque.sh
testing/cpp11/: Makefile  cpp11  cpp11_test.cc  init_ndk.env
testing/profiling/: bbqParsecCmpGrapher.py  bbqParsecTestWorkload.sh  run-parsec21-bodytrack.sh  run-parsec21-bodytrack_bbq.sh  run-parsec21-ferret.sh  run-parsec21-ferret_bbq.sh
testing/recipes/: OLD-r1_platA.recipe  OLD-r2_platA.recipe  chef_example.recipe  r05Awm01Pe.recipe  r10Awm01Pe.recipe  r1_platA.recipe  r2_platA.recipe  r3_platA.recipe  r4_platA.recipe  r5_platA.recipe  rUseCase4_HP.recipe  rUseCase4_LP.recipe  r_00.recipe  r_01.recipe  r_02.recipe  r_03.recipe  r_04.recipe  r_05.recipe  simple1_1Tl2Cl2Pe.recipe  simple2_1Tl2Cl2Pe.recipe  simple3_1Tl2Cl2Pe.recipe  (+4 more)
testing/rtlib/: CMakeLists.txt  app.cc  app.h  bbque_exc.cc  bbque_exc.h  example01.cc  main.cc  timer.cc  timer.h  utility.h
testing/tutorial/: CMakeLists.txt  app.cc  app.h  main.cc  messages  utility.h
tools/: CMakeLists.txt  bbqueConsole.sh  bbqueConsole.sh.in  bbqueLogParser.awk.in  bbqueLogPlots.sh.in  bbqueOpListBuilder.awk  bbquePlatformLayoutParser.awk  bbqueStressTest.sh.in
(+76 files in other folders)
